test/T3/Fail/DupMain.ic

class A
{
	int a(int x, int y)
	{
		Library.printi(x);
		return 0;
	}
	
	static void main(string[] args)
	{
		A a = new A();
		a.a(5, 6);
	}
	
	int b(int x, int y)
	{
		Library.printi(y);
		return 0;
	}
}

class B
{
	int c(int x, int y)
	{
		Library.printi(x);
		return 0;
	}
	
	int d(int x, int y)
	{
		Library.printi(y);
		return 0;
	}
	
	static void main(string[] args)
	{
		B b = new B();
		b.d(5, 6);
	}
	
	
}